[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^2.1.1"
replit = "^4.1.0"
Flask = "^3.0.3"
urllib3 = "^2.2.2"
telebot = "^0.0.5"
APScheduler = "^3.10.4"
vedis = "^0.7.1"
praw = "7.7.1"
requests = "2.32.3"
db = "^0.1.1"
pytelegrambotapi = "^4.22.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.8.5"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"